src/snapshots/gart__compiler__test__fib_snapshot.snap
---
source: src/compiler.rs
expression: output
---
CompilerOutput {
    script_function: Function {
        name: "script",
        arity: 0,
        chunk: Chunk {
            bytes: [
                0,
                0,
                14,
                8,
                0,
                1,
                14,
                9,
                0,
                2,
                14,
                10,
                13,
                14,
                11,
                18,
                11,
                13,
                3,
                19,
                0,
                3,
                20,
                0,
                6,
                2,
                18,
                11,
                0,
                3,
                6,
                19,
                0,
                17,
                2,
                18,
                3,
                18,
                5,
                0,
                4,
                24,
                1,
                24,
                1,
                17,
                11,
                2,
                21,
                0,
                36,
                2,
                18,
                10,
                18,
                11,
                5,
                4,
                19,
                0,
                35,
                2,
                18,
                1,
                18,
                8,
                24,
                1,
                2,
                18,
                8,
                18,
                9,
                7,
                18,
                9,
                17,
                8,
                2,
                16,
                1,
                17,
                9,
                2,
                18,
                10,
                0,
                5,
                7,
                17,
                10,
                2,
                2,
                21,
                0,
                44,
                2,
                13,
                12,
            ],
            lines: [
                1,
                1,
                1,
                1,
                2,
                2,
                2,
                2,
                3,
                3,
                3,
                3,
                4,
                4,
                4,
                6,
                6,
                6,
                6,
                6,
                6,
                6,
                6,
                6,
                6,
                6,
                6,
                6,
                6,
                6,
                6,
                6,
                6,
                6,
                6,
                7,
                7,
                7,
                7,
                7,
                7,
                7,
                7,
                7,
                7,
                7,
                7,
                7,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                11,
                11,
                11,
                11,
                11,
                11,
                11,
                12,
                12,
                12,
                12,
                12,
                13,
                13,
                13,
                13,
                13,
                14,
                14,
                14,
                14,
                14,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
            ],
            constants: [
                Number(
                    0.0,
                ),
                Number(
                    1.0,
                ),
                Number(
                    0.0,
                ),
                Number(
                    0.0,
                ),
                String(
                    "Enter fib term: ",
                ),
                Number(
                    1.0,
                ),
            ],
        },
    },
    globals_count: 12,
    natives: [
        NativeFunction {
            name: "time",
            arity: 0,
        },
        NativeFunction {
            name: "print",
            arity: 1,
        },
        NativeFunction {
            name: "random_range",
            arity: 2,
        },
        NativeFunction {
            name: "number",
            arity: 1,
        },
        NativeFunction {
            name: "string",
            arity: 1,
        },
        NativeFunction {
            name: "input",
            arity: 1,
        },
        NativeFunction {
            name: "clear",
            arity: 0,
        },
        NativeFunction {
            name: "round",
            arity: 1,
        },
    ],
}
