src/snapshots/gart__compiler__test__stress_counter_snapshot.snap
---
source: src/compiler.rs
expression: output
---
CompilerOutput {
    script_function: Function {
        name: "script",
        arity: 0,
        chunk: Chunk {
            bytes: [
                0,
                0,
                14,
                8,
                0,
                1,
                14,
                9,
                18,
                0,
                24,
                0,
                14,
                10,
                18,
                8,
                18,
                9,
                5,
                4,
                19,
                0,
                19,
                2,
                18,
                1,
                18,
                8,
                24,
                1,
                2,
                18,
                8,
                0,
                2,
                7,
                17,
                8,
                2,
                21,
                0,
                28,
                2,
                18,
                1,
                0,
                3,
                18,
                4,
                18,
                9,
                24,
                1,
                7,
                0,
                4,
                7,
                18,
                4,
                18,
                0,
                24,
                0,
                18,
                10,
                8,
                24,
                1,
                7,
                0,
                5,
                7,
                24,
                1,
                2,
                13,
                12,
            ],
            lines: [
                1,
                1,
                1,
                1,
                2,
                2,
                2,
                2,
                4,
                4,
                4,
                4,
                4,
                4,
                6,
                6,
                6,
                6,
                6,
                6,
                6,
                6,
                6,
                6,
                7,
                7,
                7,
                7,
                7,
                7,
                7,
                8,
                8,
                8,
                8,
                8,
                8,
                8,
                8,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
                10,
            ],
            constants: [
                Number(
                    0.0,
                ),
                Number(
                    100000.0,
                ),
                Number(
                    1.0,
                ),
                String(
                    "Counted to ",
                ),
                String(
                    " in ",
                ),
                String(
                    " seconds!",
                ),
            ],
        },
    },
    globals_count: 11,
    natives: [
        NativeFunction {
            name: "time",
            arity: 0,
        },
        NativeFunction {
            name: "print",
            arity: 1,
        },
        NativeFunction {
            name: "random_range",
            arity: 2,
        },
        NativeFunction {
            name: "number",
            arity: 1,
        },
        NativeFunction {
            name: "string",
            arity: 1,
        },
        NativeFunction {
            name: "input",
            arity: 1,
        },
        NativeFunction {
            name: "clear",
            arity: 0,
        },
        NativeFunction {
            name: "round",
            arity: 1,
        },
    ],
}
